tests/paczka1/fuzzy1/59825311.err
Error in line 21: A455 S954 42,8
Error in line 26: VOXeyuI S954 90,35
Error in line 22: A455 A269 86,0
Error in line 33: BMIA S396 365,3
